# mac_changer

./: .bandit  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  BACKUP_PROCEDURES.md  CLAUDE.md  CONTRIBUTING.md  P0_IMPLEMENTATION_SUMMARY.md  PYTHON_3_12_UPGRADE.md  README.md  RECOMMENDATIONS.md  TODO.md  mac_changer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_mac_changer.py
.github/workflows/: ci.yml  release.yml
archive/: mac_changer_original.py
backups/mac_addresses/: test_backup.json
scripts/: backup_restore.py  bump_version.py  install.sh  security_audit.py  test_systems.py
